# reinforcement-learning-active-slam

./: README.md
src/active_slam_interfaces/: CMakeLists.txt  package.xml
src/active_slam_interfaces/msg/: InfoMsg.msg
src/active_slam_interfaces/srv/: ResetEnv.srv  ResetGazeboEnv.srv  StepEnv.srv
src/active_slam_learning/: package.xml  setup.cfg  setup.py
src/active_slam_learning/active_slam_learning/common/: settings.py  utilities.py
src/active_slam_learning/active_slam_learning/gazebo_bridge/: gazebo_bridge.py
src/active_slam_learning/active_slam_learning/gazebo_environment/: gazebo_environment.py
src/active_slam_learning/active_slam_learning/learning/: learning_ddpg.py  learning_dqn.py  learning_ppo.py  learning_td3.py
src/active_slam_learning/active_slam_learning/learning/ddpg/: agent.py  networks.py  noise.py  replay_memory.py
src/active_slam_learning/active_slam_learning/learning/ddpg/models/: actor_ddpg  critic_ddpg  target_actor_ddpg  target_critic_ddpg
src/active_slam_learning/active_slam_learning/learning/ppo/: agent.py  memory.py  networks.py
src/active_slam_learning/active_slam_learning/learning/td3/: agent.py  networks.py  noise.py  per_memory.py  uniform_memory.py  utils.py
src/active_slam_learning/active_slam_learning/learning_environment/: learning_environment.py  reward_function.py
src/active_slam_learning/config/: initial_map.data  initial_map.posegraph  map.rviz
src/active_slam_learning/launch/: rviz.launch.py
src/active_slam_learning/models/: ppo_actor  ppo_actor_optimiser  ppo_critic  ppo_critic_optimiser
src/active_slam_learning/raw_data/: ppo_collision.npy  ppo_goals_found.npy  ppo_scores.npy  ppo_steps.npy
src/active_slam_simulations/: CMakeLists.txt  package.xml
src/active_slam_simulations/config/: common_slam_config.yaml  map.rviz
src/active_slam_simulations/launch/: first_world.launch.py  main_world.launch.py  robot_state_publisher.launch.py  slam.launch.py  spawn_turtlebot.launch.py  view_map.launch.py
src/active_slam_simulations/models/goal_pad/: model.config  model.sdf
src/active_slam_simulations/models/turtlebot3_burger/: model.sdf
src/active_slam_simulations/models/turtlebot3_waffle/: model.sdf
src/active_slam_simulations/robot_descriptions/: turtlebot3_burger.urdf  turtlebot3_waffle.urdf
src/active_slam_simulations/worlds/: Base.world  concept_ss  first_world.world  main.world  main_directions.world  main_directions_goals.world
src/slam_toolbox/config/: mapper_params_online_async.yaml
