<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>active_slam_learning</name>
  <version>0.0.0</version>
  <description>This Package implements the learning to our robots, specifically reinforcement learning. It contains the environment logic, reward system, and RL algorithms that we can use to train our mobile agents</description>
  <maintainer email="Theo.MooreCalters@gmail.com">Theo Moore-Calters</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>active_slam_interfaces</depend>
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-torchvision</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
